unpackaged/main/default/objects/Event__c/fields/CalendlyAction__c.field-meta.xml
<CustomField>
    <fullName>CalendlyAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CalendlyAction</label>
    <referenceTo>CalendlyAction__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>