unpackaged/main/default/objects/Event__c/fields/Counselor__c.field-meta.xml
<CustomField>
    <fullName>Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The counselor who will be hosting this event.</description>
    <label>Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>