unpackaged/main/default/objects/Event__c/fields/Event_Page__c.field-meta.xml
<CustomField>
    <fullName>Event_Page__c</fullName>
    <formula>HYPERLINK(Event_Page_Link__c,&#39;Event Page&#39;,&#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Page</label>
    <type>Text</type>
</CustomField>