unpackaged/main/default/objects/Event__c/fields/Event_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Page_Link__c</fullName>
    <formula>&#39;https://vertoed.secure.force.com/RequestInformation?eid=&#39;&amp;Id&amp;&#39;&amp;cid=&#39;&amp;Counselor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Page Link</label>
    <type>Text</type>
</CustomField>