unpackaged/main/default/objects/Event__c/fields/Event_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_QR_Code__c</fullName>
    <formula>IMAGE(&#39;https://chart.googleapis.com/chart?chs=350x350&amp;cht=qr&amp;chl=&#39;&amp;  SUBSTITUTE(Event_Page_Link__c, &#39;&amp;&#39;, &#39;%26&#39;),&#39;Scan QR code to open record in mobile.&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event QR Code</label>
    <type>Text</type>
</CustomField>