unpackaged/main/default/objects/Event__c/fields/Event_Rating__c.field-meta.xml
<CustomField>
    <fullName>Event_Rating__c</fullName>
    <label>Event Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>