unpackaged/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assembly Presentation</fullName>
            </value>
            <value>
                <fullName>Classroom Presentation</fullName>
            </value>
            <value>
                <fullName>College Fair</fullName>
            </value>
            <value>
                <fullName>Counselor Meeting</fullName>
            </value>
            <value>
                <fullName>Drop-Off</fullName>
            </value>
            <value>
                <fullName>Home Visit/Student 1:1</fullName>
            </value>
            <value>
                <fullName>Lunch Visit/High School Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>