unpackaged/main/default/objects/Event__c/fields/High_School__c.field-meta.xml
<CustomField>
    <fullName>High_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High School</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This High School is not applicable. If there are two or more with the same name, please try another High School.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>High School</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>