unpackaged/main/default/objects/Event__c/fields/Virtual_Event__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual Event</label>
    <type>Checkbox</type>
</CustomField>