unpackaged/main/default/objects/Event__c/validationRules/Event_Rating_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Rating_Requirement</fullName>
    <active>true</active>
    <description>This will require the event rating to be populated if the Event Status is Completed.</description>
    <errorConditionFormula>and(
$User.Bypass_Validation__c = false,

ISPICKVAL(Event_Status__c, &#39;Completed&#39;),
ISBLANK(TEXT(Event_Rating__c)),

or(isnew(),
ischanged(Event_Status__c),
ischanged(Event_Rating__c)
)
)</errorConditionFormula>
    <errorDisplayField>Event_Rating__c</errorDisplayField>
    <errorMessage>Event Rating is required when Event Status is Completed.</errorMessage>
</ValidationRule>