unpackaged/main/default/objects/Event__c/validationRules/Event_Status_Must_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Status_Must_Be_Populated</fullName>
    <active>true</active>
    <description>This will ensure if the a new event is created or edited that the event status is populated</description>
    <errorConditionFormula>and(
$User.Bypass_Validation__c = false,

ISPICKVAL(Event_Status__c, &quot;&quot;),

or(isnew(),
ischanged(Event_Status__c )
)
)</errorConditionFormula>
    <errorDisplayField>Event_Status__c</errorDisplayField>
    <errorMessage>Event Status is required.</errorMessage>
</ValidationRule>